<resources>
    <string name="app_name">Mealer App</string>
    <string name="mealer">Mealer</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="phone">Phone</string>
    <string name="Mealer">Mealer</string>
    <string name="Create_a_new_account">Create a new account</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="log_in">Log in</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="clientbutton">Register as a client</string>
    <string name="cookbutton">Register as a cook</string>
</resources>